--- a/components/HomeProjects.scss
+++ b/components/HomeProjects.scss
@@ -98,7 +98,7 @@
     margin-right: auto;
     h3 {
       font-size: 2rem;
-      text-align: center; //Added to center the text
+      text-align: left; //Added to center the text
       padding-left: 25%; //Added to center the text
       color: #fff;
     }
