--- a/components/HomeAbout.scss
+++ b/components/HomeAbout.scss
@@ -39,9 +39,9 @@
       line-height: 1.2;
     }
     a {
-      margin: 15rem 0;
+      margin: 0 0 15rem 0 !important;
       width: 85%;
-      height: 30rem;
+      height: 35rem !important;
       line-height: 0.9;
     }
   }
