--- a/components/HomeSlider.scss
+++ b/components/HomeSlider.scss
@@ -25,6 +25,7 @@
 @media (max-width: 767px) {
   .swiper-slide {
     width: 100%;
+    padding-right: 15px !important;
   }
   .hs-slide {
     img {
