--- a/components/HomeTestimonial.scss
+++ b/components/HomeTestimonial.scss
@@ -67,8 +67,8 @@
 
       &-body {
         p {
-          margin-top: 5rem;
-          text-align: justify;
+          margin-top: 10rem;
+          text-align: left;
         }
       }
     }
