Slider CSS Updated

--- a/components/HomeSlider.scss
+++ b/components/HomeSlider.scss
@@ -24,7 +24,7 @@
 
 @media (max-width: 767px) {
   .swiper-slide {
-    width: 100%;
+    width: 100% !important;
     padding-right: 15px !important;
   }
   .hs-slide {
