--- a/components/HomeAbout.scss
+++ b/components/HomeAbout.scss
@@ -37,11 +37,12 @@
     h2 {
       padding: 15rem 0;
       line-height: 1.2;
+      font-size: 10rem !important;
     }
     a {
       margin: 0 0 15rem 0 !important;
       width: 85%;
-      height: 35rem !important;
+      height: 60rem !important;
       line-height: 0.9;
     }
   }
