--- a/components/HomeNews.scss
+++ b/components/HomeNews.scss
@@ -61,18 +61,26 @@
   .home-news {
     .news-container {
       width: fit-content;
+      padding: 5rem;
       .col-50 {
         width: 100%;
       }
 
+      .news-content {
+        .news-tag {
+          h4 {
+            font-size: 6rem !important;
+          }
+        }
+      }
       .news-text {
         margin: 5% 0;
         padding-top: 10rem;
         h3 {
-          font-size: 9rem !important;
+          font-size: 12rem !important;
         }
         p {
-          font-size: 5rem !important;
+          font-size: 6rem !important;
         }
       }
     }
