--- a/components/HomeSlider.scss
+++ b/components/HomeSlider.scss
@@ -37,7 +37,7 @@
       align-items: center;
       justify-content: center;
       cursor: pointer;
-      margin: 40px 0 !important;
+      margin: 50rem 40rem !important;
     }
 
     .custom-button::after {
@@ -59,6 +59,9 @@
   .hs-slide {
     img {
       border-radius: 15px;
+    }
+    h2 {
+      padding: 5rem 2.5rem;
     }
   }
 
