--- a/components/Footer.scss
+++ b/components/Footer.scss
@@ -87,9 +87,12 @@
         font-size: 1.6rem;
         line-height: 1.2;
         margin-left: auto;
-        color: #fff;
         text-align: right;
         padding: 4px 0;
+        a {
+          color: #fff;
+          text-decoration: none;
+        }
       }
     }
   }
@@ -103,18 +106,40 @@
       line-height: 1.2;
       text-align: center;
     }
+    .social-logos {
+      flex-direction: row;
+      display: flex;
+      justify-content: center;
+      img {
+        width: 32px;
+        margin: 5px 10px;
+      }
+    }
   }
 }
 
 @media (max-width: 767px) {
   .footer {
+    .footer-wrapper {
+      .row {
+        flex-direction: column;
+        .col-50 {
+          width: 100%;
+        }
+      }
+    }
     .footer-links {
       h6 {
-        font-size: 5rem !important;
+        margin-left: 0;
+        margin-right: auto;
+        font-size: 6rem !important;
         padding-bottom: 10px;
       }
       li {
-        font-size: 4rem !important;
+        margin-left: 0 !important;
+        margin-right: auto;
+        font-size: 5rem !important;
+        text-align: left !important;
       }
     }
     .footer-cta {
@@ -122,7 +147,20 @@
         width: 120%;
       }
       a {
-        height: 35rem !important;
+        height: 60rem !important;
+      }
+    }
+
+    .footer-copyright {
+      .row {
+        flex-direction: row;
+      }
+      .col-25 {
+        p {
+          text-align: left;
+          font-size: 5rem !important;
+          padding: 4px 0;
+        }
       }
     }
   }
