--- a/components/ProjectCard.scss
+++ b/components/ProjectCard.scss
@@ -45,14 +45,14 @@
 
       .project-tags {
         display: flex;
-        padding-top: 25px;
-        .project-tag {
-          border: 1px solid #000;
-          border-radius: 30px;
-          padding: 6px 22px;
-          margin-right: 10px;
-          p {
-            font-size: 1.8rem;
+        .tags-container {
+          padding: 25px 0;
+          .project-tag {
+            border: 1px solid #000;
+            border-radius: 30px;
+            padding: 6px 22px;
+            margin-right: 10px;
+            font-size: 2rem !important;
             text-transform: uppercase;
           }
         }
@@ -80,7 +80,7 @@
           .project-tag {
             padding: 5px 15px;
             border-radius: 18px;
-            p {
+            span {
               width: max-content;
             }
           }
