--- a/components/ProjectCard.scss
+++ b/components/ProjectCard.scss
@@ -63,8 +63,8 @@
 }
 
 @media (min-width: 768px) and (max-width: 1199px) {
-  .project-card-content {
-    font-size: 4.56rem;
+  .project-card-content p {
+    font-size: 5rem;
   }
   .tags-container {
     width: 125%;
@@ -77,9 +77,6 @@
 @media (max-width: 767px) {
   .project-card-wrapper {
     .project-card {
-      &-content {
-        font-size: 4.56rem;
-      }
       .project-info {
         padding-bottom: 25rem;
       }
@@ -93,6 +90,10 @@
 
       &-content {
         padding: 15px 0 0 0;
+        max-width: 75%;
+        p {
+          font-size: 5rem !important;
+        }
         .project-tags {
           padding-top: 10px;
           .tags-container {
